Fix display, make sure navigation and sidebar display nice on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,7 +47,7 @@ p{
       height: 60px;
       background: $light-green; 
       position: relative;
-      width: 160px;
+      width: 264px;
       display: table;
 
       h1{
@@ -275,6 +275,24 @@ p{
   -moz-box-shadow: 0 5px 5px -5px rgba(0,0,0,.1);
   box-shadow: 0 5px 5px -5px rgba(0,0,0,.1);
 }
+.title-container{
+  background: #22baa0;
+}
+.top-bar.expanded{
+  .title-area{
+    background: transparent;
+  }
+  .top-bar-section ul li:not(.has-form) a:not(.button){
+    background: #000;
+    color: #22baa0;
+    &:hover{
+      background: #fff;
+    }
+  }
+  .toggle-topbar a span::after{
+    box-shadow: 0 0 0 1px #fff,0 7px 0 1px #fff,0 14px 0 1px #fff;
+  }
+}
 
 /* ------------------------------------------------------
  * search form styling section
@@ -339,7 +357,6 @@ input.form-control.input-rounded {
  * -----------------------------------------------------*/
 .section-sidebar{
   /*padding-top: 60px;*/
-  width: 160px;
   display: block;
   z-index: 998;
   float: left;
@@ -402,7 +419,6 @@ input.form-control.input-rounded {
   &.accordion-menu{
     padding: 0;
     margin: 0;
-    width: 160px;
     color: #fff;
     position: relative;
     display: block;
